--- a/YoutubeDownloader.csproj
+++ b/YoutubeDownloader.csproj
@@ -109,4 +109,7 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy $(SolutionDir)third-party $(TargetDir) /E /Y</PostBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <Deterministic>False</Deterministic>
+  </PropertyGroup>
 </Project>
