Added the download cancelling sequence. Put some text data to resources.

--- a/YoutubeDownloader.csproj
+++ b/YoutubeDownloader.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Resource Include="Images\icon.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy $(SolutionDir)third-party $(TargetDir) /E /Y</PostBuildEvent>
