--- a/YoutubeDownloader.csproj
+++ b/YoutubeDownloader.csproj
@@ -65,6 +65,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Downloader.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Utilities.cs" />
     <Page Include="MainWindowView.xaml">
