--- a/App.config
+++ b/App.config
@@ -1,8 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+    <configSections>
+        <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+    <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
+        <variable name="logDirectory" value="logs"/>
+        <variable name="logFileName" value="YoutubeDownloader.log"/>
+        <variable name="maxLogFileSize" value="5242880"/>
+        <variable name="maxArchiveFiles" value="10"/>
+
+        <targets async="true">
+            <target name="logfile" xsi:type="File" fileName="${logDirectory}/${logFileName}" 
+                    archiveAboveSize="${maxLogFileSize}" maxArchiveFiles="${maxArchiveFiles}"
+                    archiveNumbering="DateAndSequence" encoding="UTF8"/>
+        </targets>
+
+        <rules>
+            <logger name="*" minlevel="Info" writeTo="logfile" />
+        </rules>
+    </nlog>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
