Added installing WiX toolset action

--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -73,6 +73,9 @@ jobs:
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@2008f912f56e61277eefaac6d1888b750582aa16
+      
+    - name: Install WiX Toolset
+      run: dotnet add package WiX --version 3.11.2
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
