--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -77,6 +77,10 @@ jobs:
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
       run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
 
     - name: Build the application
       run: msbuild $env:Solution_Name /nologo /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
