--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -57,6 +57,10 @@ jobs:
 
     env:
       Solution_Name: MediaDownloader.sln                        # Replace with your solution name, i.e. MyWpfApp.sln.
+      Output_Path: out
+      Installer_Name_Msi: MediaDownloaderSetup.msi
+      Installer_Name_Exe: MediaDownloaderSetup.exe
+      Installer_Archive: MediaDownloaderSetup.zip
 
     steps:
     - name: Checkout
@@ -84,3 +88,31 @@ jobs:
       run: msbuild $env:Solution_Name /nologo /p:Configuration=$env:Configuration
       env:
         Configuration: ${{ matrix.configuration }}
+        
+    # Archive the package
+    - name: Create archive
+      run: Compress-Archive -Path $env:Output_Path\$env:Installer_Name_Exe -DestinationPath $env:Output_Path\$env:Installer_Archive
+
+    # Create the release:  https://github.com/actions/create-release
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.ref}}.${{matrix.ChannelName}}.${{ matrix.targetplatform }}
+        release_name:  ${{ github.ref }}.${{ matrix.ChannelName }}.${{ matrix.targetplatform }}
+        draft: false
+        prerelease: false
+
+    # Upload release asset:   https://github.com/actions/upload-release-asset
+    - name: Update release asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}  # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: ${{ env.Output_Path }}\${{ env.Installer_Archive }}
+        asset_name: ${{ env.Installer_Archive }}
+        asset_content_type: application/zip
