--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -97,8 +97,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.ref}}
-        release_name:  ${{ github.ref }}
+        tag_name: ${{ github.ref }}-release
+        release_name:  Media Downloader
         draft: false
         prerelease: false
 
