--- a/MediaDownloader.Data/MediaDownloader.Data.csproj
+++ b/MediaDownloader.Data/MediaDownloader.Data.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Authors>Yuri Maxiutenko</Authors>
+    <Company />
+    <Product>Media Downloader</Product>
+    <Copyright>Yuri Maxiutenko, 2020</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +15,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.2.31">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
