--- a/MediaDownloader.Data/MediaDownloader.Data.csproj
+++ b/MediaDownloader.Data/MediaDownloader.Data.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Authors>Yuri Maxiutenko</Authors>
     <Company />
     <Product>Media Downloader</Product>
     <Copyright>Yuri Maxiutenko, 2020</Copyright>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
