Added out directory creation.

--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -89,7 +89,10 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
         Platform: ${{ matrix.platform }}
-        
+    
+    - name: Create out directory
+      run: mkdir $env:Output_Path
+    
     - name: Archive binaries
       run: Compress-Archive -Path $env:Build_Path\* -DestinationPath $env:Output_Path\$env:Installer_Name.zip
 
