Removed the unnecessary build configurations, switched to the latest C# version

--- a/MediaDownloader.Data/MediaDownloader.Data.csproj
+++ b/MediaDownloader.Data/MediaDownloader.Data.csproj
@@ -6,7 +6,9 @@
     <Company />
     <Product>Media Downloader</Product>
     <Copyright>Yuri Maxiutenko, 2020</Copyright>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
+    <LangVersion>latest</LangVersion>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
