--- a/MediaDownloader.Data/MediaDownloader.Data.csproj
+++ b/MediaDownloader.Data/MediaDownloader.Data.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Authors>Yuri Maxiutenko</Authors>
     <Company />
     <Product>Media Downloader</Product>
