feat: Update the solution to .NET 7
Added auto-generating the Assembly Info

github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/2

--- a/MediaDownloader/MediaDownloader.csproj
+++ b/MediaDownloader/MediaDownloader.csproj
@@ -5,13 +5,15 @@
 		<TargetFramework>net7.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
 		<UseWindowsForms>true</UseWindowsForms>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 		<ApplicationIcon>Images\icon.ico</ApplicationIcon>
 		<Authors>Yuri Maxiutenko</Authors>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <Platforms>x64</Platforms>
         <LangVersion>latest</LangVersion>
         <Configurations>Debug;Release</Configurations>
+        <IsPackable>false</IsPackable>
+        <Product>Media Downloader</Product>
     </PropertyGroup>
 
 	<ItemGroup>
