feat: Update the solution to .NET 7
Made some refactoring

github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/2

--- a/MediaDownloader/MediaDownloader.csproj
+++ b/MediaDownloader/MediaDownloader.csproj
@@ -86,4 +86,12 @@
 			<LastGenOutput>Settings.Designer.cs</LastGenOutput>
 		</None>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Page Update="UI\Views\MainWindowView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	    <XamlRuntime>Wpf</XamlRuntime>
+	    <SubType>Designer</SubType>
+	  </Page>
+	</ItemGroup>
 </Project>
