feat: Add downloader auto-update
Added updating the downloader on startup. Updated the yt-dlp and ffmpeg to the latest versions. Made some refactoring.

github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/3

--- a/MediaDownloader/appsettings.json
+++ b/MediaDownloader/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "DownloaderPath": ".\\youtube-dl.exe",
+  "DownloaderPath": ".\\yt-dlp.exe",
   "ConverterPath": ".\\ffmpeg\\bin\\ffmpeg.exe"
 }
