--- a/MediaDownloader/MediaDownloader.csproj
+++ b/MediaDownloader/MediaDownloader.csproj
@@ -88,7 +88,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Page Update="UI\Views\MainWindowView.xaml">
+	  <Page Update="UI\Views\MainWindow.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	    <XamlRuntime>Wpf</XamlRuntime>
 	    <SubType>Designer</SubType>
