--- a/MediaDownloader.Data/MediaDownloader.Data.csproj
+++ b/MediaDownloader.Data/MediaDownloader.Data.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
     <Authors>Yuri Maxiutenko</Authors>
-    <Company />
     <Product>Media Downloader</Product>
-    <Copyright>Yuri Maxiutenko, 2020</Copyright>
+    <Copyright>Yuri Maxiutenko, 2023</Copyright>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Platforms>x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release</Configurations>
