fix: Fix the UI
Refactored the UI, switched to using the Microsoft Segoe Fluent Icons font for the icons

github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/5

--- a/MediaDownloader/MediaDownloader.csproj
+++ b/MediaDownloader/MediaDownloader.csproj
@@ -48,9 +48,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Resource Include="Images\icon_download.png" />
-		<Resource Include="Images\icon_show.png" />
-		<Resource Include="Images\icon_stop.png" />
+		<None Remove="Fonts\Segoe Fluent Icons.ttf" />
+		<Resource Include="Fonts\Segoe Fluent Icons.ttf" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -101,5 +100,9 @@
 	  <Content Include="..\version.json">
 	    <Link>version.json</Link>
 	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="UI\Themes\" />
 	</ItemGroup>
 </Project>
