--- a/MediaDownloader/MediaDownloader.csproj
+++ b/MediaDownloader/MediaDownloader.csproj
@@ -31,6 +31,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
+		<PackageReference Include="Humanizer.Core.ru" Version="2.14.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
