refactor: moved the Downloader logic to a separate module

--- a/MediaDownloader/MediaDownloader.csproj
+++ b/MediaDownloader/MediaDownloader.csproj
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\MediaDownloader.Data\MediaDownloader.Data.csproj" />
+		<ProjectReference Include="..\MediaDownloader.Download\MediaDownloader.Download.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
